--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "jdbx-t",
-  "version": "0.0.7",
+  "version": "0.1.0",
   "description": "A Local Json Database",
   "main": "jsonStorage.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/abdulrhmanjalal/jdbx"
+  },
   "keywords": [
     "json",
     "json databse",
